--- a/style/style.css
+++ b/style/style.css
@@ -61,7 +61,7 @@ p {
 
 
 /* limit about me text width when next to each other and to close */
-@media only screen and (800px <= width <= 1200px) {
+@media only screen and (800px <=width <=1200px) {
     .about-article {
         max-width: 40%;
     }
@@ -194,9 +194,11 @@ p {
         .icons-wrapper>a:has(+ a:hover) {
             scale: 1.2;
         }
-        .icons-wrapper>a:hover + a {
+
+        .icons-wrapper>a:hover+a {
             scale: 1.2;
         }
+
         .icons-wrapper>a:hover {
             scale: 1.5
         }
@@ -211,4 +213,65 @@ p {
             scale: 1.2;
         }
     }
+}
+
+footer>a {
+    color: var(--buttons--primary);
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    margin-block: 10%;
+}
+
+.contact-form {
+    width: 100%;
+}
+
+.contact-form>form {
+    width: 100%;
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-field-wrapper {
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.form-field-wrapper>:nth-child(2) {
+    color: var(--text-color);
+    border: var(--bg-secondary) solid 3px;
+    border-radius: 5px;
+    width: 50%;
+    background-color: var(--bg-mix);
+}
+
+input[type="submit"] {
+    background-color: var(--bg-mix);
+    color: var(--text-color);
+    margin-top: 20px;
+    border-radius: 10px;
+    border: var(--bg-secondary) solid 3px;
+}
+
+center {
+    margin-top: 10px;
+}
+
+input:focus,
+textarea:focus {
+    border: var(--buttons-mix) 3px solid;
+    outline-color: var(--buttons-mix);
+    outline-style: solid;
+    outline-width: 3px;
 }
