--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
 <app-nav-bar></app-nav-bar>
 <app-about-me id="start"></app-about-me>
+
+<div id="projects">
+	<app-project-card project="Nerscylla/minimal-backend-framework.rs" />
+	<app-project-card project="Nerscylla/angular-startpage" />
+	<app-project-card project="Nerscylla/wallpaper-factory" />
+	<app-project-card project="Nerscylla/chat-app-ws" />
+</div>
