--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,3 +3,18 @@
 	display: flex;
 	flex-direction: column;
 }
+
+#projects {
+	padding: 0 clamp(0px, 10vw, 200px);
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: clamp(40px, 5vw, 100px);
+
+	@media (max-width: 900px) {
+		grid-template-columns: 1fr;
+	}
+
+	@media (max-width: 600px) {
+		padding: 0;
+	}
+}
