--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -6,9 +6,11 @@ p {
 
 :host {
 	padding: 0 clamp(10px, 5%, 50px);
-	min-height: calc(92.5vh - 2 * 5px);
+	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: end;
+	position: relative;
+	top: calc(-7.5vh - 2 * 5px);
 }
