--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,10 @@
 		sans-serif;
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	background-color: var(--bg);
 	width: 100vw;
@@ -29,6 +33,7 @@ body {
 * {
 	margin: 0;
 	padding: 0;
+	color: var(--fg);
 }
 
 .fancy-text {
