--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,13 @@
 <app-about-me id="start"></app-about-me>
 
 <div id="projects">
-	<app-project-card project="Nerscylla/minimal-backend-framework.rs" />
-	<app-project-card project="Nerscylla/angular-startpage" />
-	<app-project-card project="Nerscylla/wallpaper-factory" />
-	<app-project-card project="Nerscylla/chat-app-ws" />
+	<div class="heading-cont">
+		<h2>Projects</h2>
+	</div>
+	<div class="project-cont">
+		<app-project-card project="Nerscylla/minimal-backend-framework.rs" />
+		<app-project-card project="Nerscylla/angular-startpage" />
+		<app-project-card project="Nerscylla/wallpaper-factory" />
+		<app-project-card project="Nerscylla/chat-app-ws" />
+	</div>
 </div>
