feat: add SkillCard component with dynamic data and icons for various skills

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,3 +12,10 @@
 		<app-project-card project="Nerscylla/chat-app-ws" />
 	</div>
 </div>
+
+<div id="skills">
+	<app-skill-card skill="AngularJS" />
+	<app-skill-card skill="TypeScript" />
+	<app-skill-card skill="PHP" />
+	<app-skill-card skill="Python" />
+</div>
