--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,6 +1,7 @@
 p {
+	position: relative;
+	top: -7.5vh;
 	font-size: 2rem;
-	width: clamp(300px, 60%, 1440px);
 	text-align: right;
 	@media (max-width: 820px) {
 		font-size: 1.5rem;
@@ -9,15 +10,4 @@ p {
 	@media (max-height: 820px) {
 		padding-top: 4rem;
 	}
-}
-
-:host {
-	padding: 0 clamp(10px, 5%, 50px);
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: end;
-	position: relative;
-	top: calc(-7.5vh - 2 * 5px);
 }
