--- a/src/app/project-card/project-card.component.scss
+++ b/src/app/project-card/project-card.component.scss
@@ -15,3 +15,22 @@
 .languages img {
 	margin: 0 5px;
 }
+
+a {
+	text-decoration: none;
+	color: var(--fg);
+	transition: 250ms;
+}
+a::after {
+	content: "";
+	display: block;
+	width: 100%;
+	height: 0.5vh;
+	border-radius: 100vh;
+	background: var(--fancy-gradient);
+	scale: 0 1;
+	transition: 250ms;
+}
+a:hover::after {
+	scale: 1 1;
+}
