feat: enhance SkillCard component with link functionality and update skills data

--- a/src/app/skill-card/skill-card.component.html
+++ b/src/app/skill-card/skill-card.component.html
@@ -1,5 +1,7 @@
 <div>
-	<h3>{{skill}}</h3>
+	<a target="_bland" href="{{link}}">
+		<h3>{{skill}}</h3>
+	</a>
 	<ng-icon name="{{icon}}"></ng-icon>
 	<p>{{description}}</p>
 </div>
