feat: learning section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,10 +20,21 @@
 	<div class="heading-cont">
 		<h2>My Skills</h2>
 	</div>
-	<div class="skillgrid">
+	<div class="skill-grid skill-card-grid">
 		<app-skill-card skill="AngularJS" />
 		<app-skill-card skill="TypeScript" />
 		<app-skill-card skill="PHP" />
 		<app-skill-card skill="Python" />
+	</div>
+</div>
+
+<div id="learning" class="page">
+	<div class="heading-cont">
+		<h2>I'm currently learning</h2>
+	</div>
+	<div class="learning-grid skill-card-grid">
+		<app-skill-card skill="Rust" />
+		<app-skill-card skill="discord.js" />
+		<app-skill-card skill="C#" />
 	</div>
 </div>
