feat: add contact section with links to social media

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,3 +38,20 @@
 		<app-skill-card skill="C#" />
 	</div>
 </div>
+
+<div id="contact" class="page">
+	<div class="heading-cont">
+		<h2>Contact Me</h2>
+	</div>
+	<div class="contact-links">
+		<a href="https://github.com/Nerscylla">
+			<ng-icon name="simpleGithub"></ng-icon>
+		</a>
+		<a href="https://discord.com/users/799599681280802848">
+			<ng-icon name="simpleDiscord"></ng-icon>
+		</a>
+		<a href="https://www.instagram.com/nerscylla07/">
+			<ng-icon name="simpleInstagram"></ng-icon>
+		</a>
+	</div>
+</div>
