--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -78,3 +78,49 @@ div.project-cont {
 		grid-template-columns: 1fr;
 	}
 }
+
+.contact-links {
+	min-height: 80vh;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	gap: 5vw;
+	a {
+		transition: 250ms;
+	}
+	@media (max-width: 800px) {
+		flex-direction: column;
+	}
+	a:hover,
+	a:focus {
+		scale: 125%;
+	}
+	a:has(+ a:hover),
+	a:has(+ a:focus) {
+		scale: 112.5%;
+		opacity: 0.8;
+	}
+	a:hover + a,
+	a:focus + a {
+		scale: 112.5%;
+		opacity: 0.8;
+	}
+	a {
+		font-size: 15rem;
+		--fg: var(--accent);
+		ng-icon {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			min-height: 120%;
+		}
+		@media (max-width: 1200px) {
+			font-size: 10rem;
+		}
+		@media (max-width: 800px) {
+			font-size: 7rem;
+		}
+	}
+}
