fix: various small improvements / responsiveness

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,13 +44,13 @@
 		<h2>Contact Me</h2>
 	</div>
 	<div class="contact-links">
-		<a href="https://github.com/Nerscylla">
+		<a href="https://github.com/Nerscylla" target="_blank">
 			<ng-icon name="simpleGithub"></ng-icon>
 		</a>
-		<a href="https://discord.com/users/799599681280802848">
+		<a href="https://discord.com/users/799599681280802848" target="_blank">
 			<ng-icon name="simpleDiscord"></ng-icon>
 		</a>
-		<a href="https://www.instagram.com/nerscylla07/">
+		<a href="https://www.instagram.com/nerscylla07/" target="_blank">
 			<ng-icon name="simpleInstagram"></ng-icon>
 		</a>
 	</div>
