--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -5,10 +5,16 @@
 	left: 5%;
 	z-index: 10;
 	width: clamp(320px, 90vw, 1440px);
+	nav:hover {
+		border: 5px var(--accent) solid;
+	}
+	max-width: 100vw;
 }
 
 nav {
-	width: 100%;
+	max-width: 100vw;
+	transition: 250ms;
+	width: clamp(0px, 100%, 100vw);
 	min-height: 7.5vh;
 	background: var(--secondary-bg);
 	border-radius: 100vh;
@@ -17,7 +23,27 @@ nav {
 	justify-content: space-evenly;
 	align-items: center;
 	font-size: 2rem;
+	flex-wrap: wrap;
 	border: 5px var(--secondary) solid;
+	@media (max-width: 1200px) {
+		font-size: 1.5rem;
+	}
+	@media (max-width: 800px) {
+		font-size: 1.2rem;
+	}
+	@media (max-width: 600px) {
+		font-size: 1rem;
+	}
+	@media (max-width: 450px) {
+		font-size: 1rem;
+		overflow-wrap: break-word;
+		a {
+			max-width: 15%;
+		}
+	}
+	@media (max-width: 350px) {
+		font-size: 0.8rem;
+	}
 	a {
 		text-decoration: none;
 		color: var(--primary);
