--- a/src/app/skill-card/skill-card.component.scss
+++ b/src/app/skill-card/skill-card.component.scss
@@ -24,6 +24,23 @@ div {
 	}
 }
 
+a {
+	text-decoration: none;
+}
+a::after {
+	content: "";
+	display: block;
+	width: 100%;
+	height: 0.5vh;
+	border-radius: 100vh;
+	background: var(--fancy-gradient);
+	scale: 0 1;
+	transition: 250ms;
+}
+a:hover::after {
+	scale: 1 1;
+}
+
 h3,
 p {
 	text-align: center;
